--- a/index.html
+++ b/index.html
@@ -4,28 +4,79 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/darshan-as-17-portfolio/profile.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Darshan | Portfolio</title>
 
+    <title>Darshan A S | Portfolio</title>
+
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Darshan - MERN Stack Developer. I specialize in building modern, full-stack web applications using MongoDB, Express.js, React, and Node.js."
+      content="Darshan A S - MERN Stack Developer. I specialize in building modern, full-stack web applications using MongoDB, Express.js, React, and Node.js."
     />
     <meta
       name="keywords"
-      content="Darshan, MERN Stack, Full-Stack Developer, Web Development, React, Node.js, MongoDB, Express.js, JavaScript, Frontend, Backend, Portfolio"
+      content="Darshan A S, MERN Stack, Full-Stack Developer, Web Development, React, Node.js, MongoDB, Express.js, JavaScript, Frontend, Backend, Portfolio"
     />
-    <meta name="og:image" content="/cover.png" />
-    <meta name="author" content="Darshan" />
+    <meta name="author" content="Darshan A S" />
+    <meta name="robots" content="index, follow" />
     <link
       rel="canonical"
       href="https://darshanas17.github.io/darshan-as-17-portfolio/"
     />
+
+    <!-- Open Graph Meta Tags (for better social media sharing) -->
+    <meta property="og:title" content="Darshan A S | Portfolio" />
+    <meta
+      property="og:description"
+      content="MERN Stack Developer | Full-Stack Web Developer specializing in React, Node.js, and MongoDB."
+    />
+    <meta
+      property="og:image"
+      content="https://darshanas17.github.io/darshan-as-17-portfolio/cover.png"
+    />
+    <meta
+      property="og:url"
+      content="https://darshanas17.github.io/darshan-as-17-portfolio/"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Darshan A S | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="MERN Stack Developer | Full-Stack Web Developer specializing in React, Node.js, and MongoDB."
+    />
+    <meta
+      name="twitter:image"
+      content="https://darshanas17.github.io/darshan-as-17-portfolio/cover.png"
+    />
+
+    <!-- JSON-LD Structured Data for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Darshan A S",
+        "url": "https://darshanas17.github.io/darshan-as-17-portfolio/",
+        "sameAs": [
+          "https://github.com/darshanas17",
+          "https://www.linkedin.com/in/darshan-a-s/"
+        ],
+        "jobTitle": "Full-Stack Web Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Freelancer"
+        }
+      }
+    </script>
 
     <!-- Google Analytics -->
     <script
