--- a/index.html
+++ b/index.html
@@ -2,83 +2,113 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/profile.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/profile.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/profile.png" />
+
+    <!-- Preload Important Assets -->
+    <link rel="preload" href="/profile.png" as="image" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
 
-    <title>Darshan A S | Portfolio</title>
+    <title>Darshan A S | MERN Stack Developer Portfolio</title>
 
-    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Darshan A S - MERN Stack Developer. I specialize in building modern, full-stack web applications using MongoDB, Express.js, React, and Node.js."
+      content="I am Darshan A S, a MERN Stack Developer building fast, modern, and scalable full-stack applications using React, Node.js, Express, and MongoDB."
     />
     <meta
       name="keywords"
-      content="Darshan A S, MERN Stack, Full-Stack Developer, Web Development, React, Node.js, MongoDB, Express.js, JavaScript, Frontend, Backend, Portfolio"
+      content="Darshan A S, MERN Developer, Full Stack Developer, React Developer, Node.js Developer, JavaScript Developer, Portfolio, Web Developer"
     />
     <meta name="author" content="Darshan A S" />
     <meta name="robots" content="index, follow" />
-    <link
-      rel="canonical"
-      href="https://darshanas17.github.io/darshan-as-17-portfolio/"
-    />
+    <link rel="canonical" href="https://darshan-as.onrender.com" />
 
-    <!-- Open Graph Meta Tags (for better social media sharing) -->
-    <meta property="og:title" content="Darshan A S | Portfolio" />
+    <!-- Contact Meta -->
+    <meta name="contact" content="darshanatruval@gmail.com" />
+    <meta name="reply-to" content="darshanatruval@gmail.com" />
+
+    <meta property="og:title" content="Darshan A S | MERN Stack Developer" />
     <meta
       property="og:description"
-      content="MERN Stack Developer | Full-Stack Web Developer specializing in React, Node.js, and MongoDB."
+      content="Explore full-stack projects, skills, and experience by MERN Stack Developer Darshan A S."
     />
     <meta
       property="og:image"
-      content="https://darshanas17.github.io/darshan-as-17-portfolio/cover.png"
+      content="https://darshan-as.onrender.com/cover.png"
     />
-    <meta
-      property="og:url"
-      content="https://darshanas17.github.io/darshan-as-17-portfolio/"
-    />
+    <meta property="og:url" content="https://darshan-as.onrender.com" />
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Darshan A S Portfolio" />
+    <meta property="og:locale" content="en_IN" />
 
-    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Darshan A S | Portfolio" />
+    <meta name="twitter:title" content="Darshan A S | MERN Stack Developer" />
     <meta
       name="twitter:description"
-      content="MERN Stack Developer | Full-Stack Web Developer specializing in React, Node.js, and MongoDB."
+      content="View my MERN stack projects, skills, and work experience."
     />
     <meta
       name="twitter:image"
-      content="https://darshanas17.github.io/darshan-as-17-portfolio/cover.png"
+      content="https://darshan-as.onrender.com/cover.png"
     />
 
-    <!-- JSON-LD Structured Data for SEO -->
     <script type="application/ld+json">
       {
-        "@context": "https://schema.org",
+        "@context": "https://schema.org/",
         "@type": "Person",
         "name": "Darshan A S",
-        "url": "https://darshanas17.github.io/darshan-as-17-portfolio/",
+        "email": "mailto:darshanatruval@gmail.com",
+        "image": "https://darshanas17.github.io/darshan-as-17-portfolio/cover.png",
+        "jobTitle": "Full-Stack Web Developer",
+        "url": "https://darshan-as.onrender.com",
+        "affiliation": {
+          "@type": "Organization",
+          "name": "Freelance Developer"
+        },
         "sameAs": [
           "https://github.com/Darshanas17",
           "https://www.linkedin.com/in/darshan-a-s/"
         ],
-        "jobTitle": "Full-Stack Web Developer",
-        "worksFor": {
-          "@type": "Organization",
-          "name": "Freelancer"
+        "knowsAbout": [
+          "JavaScript",
+          "React.js",
+          "Node.js",
+          "Express.js",
+          "MongoDB",
+          "SQL",
+          "Web Development",
+          "Frontend Development",
+          "Backend Development",
+          "REST APIs",
+          "UI Development"
+        ]
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "WebSite",
+        "name": "Darshan A S Portfolio",
+        "url": "https://darshan-as.onrender.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://darshan-as.onrender.com/?q={search_term_string}",
+          "query-input": "required name=search_term_string"
         }
       }
     </script>
 
-    <!-- Google Analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-DBYPHRGPT1"
